--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/FieldsSpec.js"></script>
+  <script src="spec/PlayerOneSpec.js"></script>
 
 </head>
 
