--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here... -->
   <script src="src/Fields.js"></script>
+  <script src="src/PlayerOne.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/FieldsSpec.js"></script>
