--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Fields.js"></script>
+  <script src="src/Board.js"></script>
   <script src="src/PlayerOne.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/FieldsSpec.js"></script>
+  <script src="spec/BoardSpec.js"></script>
   <script src="spec/PlayerOneSpec.js"></script>
 
 </head>
