--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script src="spec/BoardSpec.js"></script>
   <script src="spec/PlayerOneSpec.js"></script>
+  <script src="spec/PlayerTwoSpec.js"></script>
 
 </head>
 
