set up playerTwo's initial state

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="src/Board.js"></script>
   <script src="src/PlayerOne.js"></script>
+  <script src="src/PlayerTwo.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/BoardSpec.js"></script>
