--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,7 +20,7 @@
   <script src="spec/BoardSpec.js"></script>
   <script src="spec/PlayerOneSpec.js"></script>
   <script src="spec/PlayerTwoSpec.js"></script>
-
+  <script src="spec/GameSpec.js"></script>
 </head>
 
 <body>
