Added Board to Game

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,6 +15,7 @@
   <script src="src/Board.js"></script>
   <script src="src/PlayerOne.js"></script>
   <script src="src/PlayerTwo.js"></script>
+  <script src="src/Game.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/BoardSpec.js"></script>
