Added game controller - sets types

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,13 +15,17 @@
   <script src="src/Board.js"></script>
   <script src="src/PlayerOne.js"></script>
   <script src="src/PlayerTwo.js"></script>
+  <script src="src/GameChecker.js"></script>
   <script src="src/Game.js"></script>
+
 
   <!-- include spec files here... -->
   <script src="spec/BoardSpec.js"></script>
   <script src="spec/PlayerOneSpec.js"></script>
   <script src="spec/PlayerTwoSpec.js"></script>
+  <script src="spec/GameCheckerSpec.js"></script>
   <script src="spec/GameSpec.js"></script>
+
 </head>
 
 <body>
