Added index.html page with nought and cross images to select

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   </head>
     <body>
       <div id="app">hello</div>
+      <center>
+        <a href="#play"><img id="O" src="resources/images/nought.jpg" alt="Nought" style="width:150px;height:150px;"></a>
+        <a href="#play"><img id="X" src="resources/images/cross.jpg" alt="Cross" style="width:150px;height:150px;"></a>
+      </center>
     </body>
 </html>
