Added working interface

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Jasmine Spec Runner v2.5.2</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Jasmine Spec Runner v2.5.2</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.5.2/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.5.2/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.5.2/jasmine_favicon.png">
+    <link rel="stylesheet" href="lib/jasmine-2.5.2/jasmine.css">
 
-  <script src="lib/jasmine-2.5.2/jasmine.js"></script>
-  <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.5.2/boot.js"></script>
+    <script src="lib/jasmine-2.5.2/jasmine.js"></script>
+    <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
+    <script src="lib/jasmine-2.5.2/boot.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Board.js"></script>
-  <script src="src/PlayerOne.js"></script>
-  <script src="src/PlayerTwo.js"></script>
-  <script src="src/GameChecker.js"></script>
-  <script src="src/Game.js"></script>
+    <!-- include source files here... -->
+    <script src="src/Board.js"></script>
+    <script src="src/PlayerOne.js"></script>
+    <script src="src/PlayerTwo.js"></script>
+    <script src="src/GameChecker.js"></script>
+    <script src="src/Game.js"></script>
 
 
-  <!-- include spec files here... -->
-  <script src="spec/BoardSpec.js"></script>
-  <script src="spec/PlayerOneSpec.js"></script>
-  <script src="spec/PlayerTwoSpec.js"></script>
-  <script src="spec/GameCheckerSpec.js"></script>
-  <script src="spec/GameSpec.js"></script>
-
-</head>
-
-<body>
-</body>
+    <!-- include spec files here... -->
+    <script src="spec/BoardSpec.js"></script>
+    <script src="spec/PlayerOneSpec.js"></script>
+    <script src="spec/PlayerTwoSpec.js"></script>
+    <script src="spec/GameCheckerSpec.js"></script>
+    <script src="spec/GameSpec.js"></script>
+  </head>
+  <body>
+    <div id="choices">
+      <h1>PLAYER ONE - choose your marker:</h1>
+      <a href="#play"><img id="O" src="resources/images/nought.jpg" alt="Nought" style="width:150px;height:150px;"></a>
+      <a href="#play"><img id="X" src="resources/images/cross.jpg" alt="Cross" style="width:150px;height:150px;"></a>
+    </div>
+  </body>
 </html>
