--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="src/PlayerOne.js"></script>
     <script src="src/PlayerTwo.js"></script>
     <script src="src/Game.js"></script>
-    <!-- <script src="index.js"></script> -->
+    <script src="src/GameView.js"></script>
+    <script src="index.js"></script>
     <style>
       table, th, td {
         border: 5px solid black;
@@ -33,85 +34,39 @@
       <center>
         <div id="app">
           <div id="choices">
-            <h1>PLAYER ONE - choose your marker:</h1>
-            <a href="#play"><img id="O" src="resources/images/nought.jpg" alt="Nought" style="width:150px;height:150px;"></a>
-            <a href="#play"><img id="X" src="resources/images/cross.jpg" alt="Cross" style="width:150px;height:150px;"></a>
+            <h1>Player One, please choose your marker:</h1>
+            <a href="#play"><p style="font-size:150px; width:150px; height:150px;" id="X">X</font></a>
+            <a href="#play"><p style="font-size:150px; width:150px; height:150px;" id="O">O</font></a>
           </div>
           <div id="board">
             <table style="width:50%">
               <tr>
-                <td class="container">
-                  <center>
-                    <a href="#0">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="0">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#1">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="1">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#2">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="2">
                 </td>
               </tr>
               <tr>
-                <td class="container">
-                  <center>
-                    <a href="#3">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="3">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#4">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="4">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#5">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="5">
                 </td>
               </tr>
               <tr>
-                <td class="container">
-                  <center>
-                    <a href="#6">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="6">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#7">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="7">
                 </td>
-                <td class="container">
-                  <center>
-                    <a href="#8">
-                      <img id="0" src="resources/images/blank.jpg" style="width:150px;height:150px;">
-                    </a>
-                  </center>
+                <td class="container" id="8">
                 </td>
               </tr>
             </table>
           </div>
         </div>
-
       </center>
     </body>
 </html>
